add Thesshack event

--- a/index.html
+++ b/index.html
@@ -241,8 +241,21 @@
                     <h3 class="section-subheading text-muted">Upcoming and past events, newest to oldest.</h3>
                 </div>
             </div>
-            <div class="row">           
-
+            <div class="row">
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#portfolioModal15" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/events/thesshack-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Thesshack</h4>
+                        <p class="text-muted">Wikipedia Hackathon</p>
+                    </div>
+                </div>
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal14" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -357,7 +370,7 @@
                         <p class="text-muted">Solve a real-life engineering problem from Google</p>
                     </div>
                 </div>
-                
+
                 <div class="col-md-4 col-sm-6 portfolio-item">
                     <a href="#portfolioModal6" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
@@ -1039,7 +1052,60 @@
         </div>
     </div> -->
 
-    <!-- USED -->
+    <div class="portfolio-modal modal fade" id="portfolioModal15" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <!-- Project Details Go Here -->
+                            <h2>Thesshack - Wiki Hackathon</h2>
+
+                            <p class="item-intro text-muted">
+                              It's time to come together and use technology to transform ideas into reality! <br>
+                              Τhesshack is a hackathon aimed to improve the way Wikipedia, our favourite online encyclopaedia, works. Just bring your laptop and your good mood and we promise a great event, full of creativity in an inspiring venue! Also, Wikimedia Österreich offers 2 full scholarships to attend Wikimedia Hackathon 2017 in Vienna (May 19-21) to the participants.
+                            </p>
+
+                            <p class="item-intro text-muted">
+                              To participate please fill this <a href="https://goo.gl/forms/qvorkolAqAJ5Ot9j1" target="_blank">form</a>.
+                              Facebook event <a href="https://www.facebook.com/events/333420780326262/?active_tab=posts" target="_blank">here</a>!
+                            </p>
+
+                            <p class="item-intro text-muted">
+                              <strong>Timetable:</strong><br>
+                              09:00–09:30 Registrations<br>
+                              09:30–10:00 Welcome<br>
+                              10:00–10:10 DBpedia<br>
+                              10:10–10:20 AutoWikiBrowser<br>
+                              10:20–10:30 Phabricator<br>
+                              10:30–10:50 theSShack Guidelines<br>
+                              10:50–13:30 Hacking<br>
+                              13:30–14:30 Food &amp; Networking Break<br>
+                              14:30–18:30 Hacking<br>
+                              18:30–19:00 Closing Ceremony – Awards<br>
+                              19:00-03:00 After party
+                            </p>
+
+                            <ul class="list-inline">
+                                <li><strong>Date</strong>: October 15<sup>th</sup> 2016 </li>
+                                <li><strong>Time</strong>: 09:00-19:00</li>
+                                <li><strong>Place</strong>: <a href="http://kedea.rc.auth.gr/index.html" target="_blank">KEDEA</a></li>
+                            </ul>
+                            <img class="img-responsive img-centered" src="img/events/thesshack-poster.png" alt="Editathon Poster">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="portfolio-modal modal fade" id="portfolioModal14" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
@@ -1058,7 +1124,7 @@
                             <p class="item-intro text-muted">
                               Are you ready to see how memories are made? Digital memories that is! Bring your laptops and arduino at Tech Ministry this Saturday with you where we'll learn all about logic gates and shift registers!
                             </p>
-                           
+
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: June 11<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 16:00-19:00</li>
@@ -1074,9 +1140,6 @@
             </div>
         </div>
     </div>
-
-
-
 
     <div class="portfolio-modal modal fade" id="portfolioModal13" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
