add e-food sponsorship on thesshack event

--- a/index.html
+++ b/index.html
@@ -1069,7 +1069,8 @@
 
                             <p class="item-intro text-muted">
                               It's time to come together and use technology to transform ideas into reality! <br>
-                              Τhesshack is a hackathon aimed to improve the way Wikipedia, our favourite online encyclopaedia, works. Just bring your laptop and your good mood and we promise a great event, full of creativity in an inspiring venue! Also, Wikimedia Österreich offers 2 full scholarships to attend Wikimedia Hackathon 2017 in Vienna (May 19-21) to the participants.
+                              Τhesshack is a hackathon aimed to improve the way Wikipedia, our favourite online encyclopaedia, works. Just bring your laptop and your good mood and we promise a great event, full of creativity in an inspiring venue! Also, Wikimedia Österreich offers 2 full scholarships to attend Wikimedia Hackathon 2017 in Vienna (May 19-21) to the participants.<br>
+							  Food is kindly sponsored from <a href="https://www.e-food.gr/" target="_blank">e-food.gr</a>!
                             </p>
 
                             <p class="item-intro text-muted">
@@ -1084,12 +1085,14 @@
                               10:00–10:10 DBpedia<br>
                               10:10–10:20 AutoWikiBrowser<br>
                               10:20–10:30 Phabricator<br>
-                              10:30–10:50 theSShack Guidelines<br>
-                              10:50–13:30 Hacking<br>
+                              10:30–10:40 API<br>
+                              10:40–11:00 theSShack Guidelines<br>
+                              11:00–13:30 Hacking<br>
                               13:30–14:30 Food &amp; Networking Break<br>
                               14:30–18:30 Hacking<br>
                               18:30–19:00 Closing Ceremony – Awards<br>
-                              19:00-03:00 After party
+                              19:00–20:00 Pizza time! (sponsored by <a href="https://www.e-food.gr/" target="_blank">e-food.gr</a>)<br>
+                              20:00-03:00 After party
                             </p>
 
                             <ul class="list-inline">
