--- a/index.html
+++ b/index.html
@@ -1092,15 +1092,17 @@
                               Facebook event <a href="https://www.facebook.com/events/333420780326262/?active_tab=posts" target="_blank">here</a>!
                             </p>
 
-                            <p class="item-intro text-muted">
-                              <strong>Timetable:</strong><br>
+                            <p class="item-intro text-muted" style="margin:0">
+                                <strong>Timetable</strong><br>
+                            </p>
+                            <p class="item-intro text-muted" style="text-align: left; width: 50%; margin: 0 auto 10px auto;">
                               09:00–09:30 Registrations<br>
                               09:30–10:00 Welcome<br>
                               10:00–10:10 DBpedia<br>
                               10:10–10:20 AutoWikiBrowser<br>
                               10:20–10:30 Phabricator<br>
                               10:30–10:40 API<br>
-                              10:40–11:00 theSShack Guidelines<br>
+                              10:40–11:00 Thesshack Guidelines<br>
                               11:00–13:30 Hacking<br>
                               13:30–14:30 Food &amp; Networking Break<br>
                               14:30–18:30 Hacking<br>
@@ -1172,7 +1174,7 @@
             </div>
         </div>
     </div>
-    
+
     <div class="portfolio-modal modal fade" id="portfolioModal14" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
             <div class="close-modal" data-dismiss="modal">
