change tm links to λ-space

--- a/index.html
+++ b/index.html
@@ -1156,7 +1156,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: July 18<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 20:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Lambda Space</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
 
                             <p class="item-intro text-muted">
@@ -1197,7 +1197,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: June 11<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 16:00-19:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <!--p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p-->
                             <img class="img-responsive img-centered" src="img/events/arduino103-poster.png" alt="Editathon Poster">
@@ -1238,7 +1238,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: May 29<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 15:00-20:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <!--p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p-->
                             <img class="img-responsive img-centered" src="img/events/editathon2-poster.png" alt="Editathon Poster">
@@ -1279,7 +1279,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: May 07<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 17:00-19:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <!--p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p-->
                             <img class="img-responsive img-centered" src="img/events/blockchain-poster.jpg" alt="Blockchain Poster">
@@ -1326,7 +1326,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: April 10<sup>th</sup> &amp; April 17<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 16:00-19:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <!--p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p-->
                             <img class="img-responsive img-centered" src="img/events/illustrator-poster.jpg" alt="Illustrator Poster">
@@ -1378,7 +1378,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: April 2<sup>nd</sup> 2016 </li>
                                 <li><strong>Time</strong>: 12:00-18:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <!--p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p-->
                             <img class="img-responsive img-centered" src="img/events/arduinoday2016-poster.png" alt="Moveduino Poster">
@@ -1425,7 +1425,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: March 5<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 16:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/174576396255490/" target="_blank">here</a>!</p>
                             <img class="img-responsive img-centered" src="img/events/arduino102-poster.png" alt="Moveduino Poster">
@@ -1467,7 +1467,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: February 14<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 17:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <p class="item-intro text-muted">Facebook event <a href="https://www.facebook.com/events/492662114253465/" target="_blank">here</a>!</p>
                             <img class="img-responsive img-centered" src="img/events/arduino101-poster.png" alt="Loveduino Poster">
@@ -1503,7 +1503,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: February 11<sup>th</sup> 2016 </li>
                                 <li><strong>Time</strong>: 19:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <p class="item-intro text-muted">
                                 Sign up <a href="https://hashcode.withgoogle.com/signup.html" target="_blank">here</a>! <br>
@@ -1539,7 +1539,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: December 12<sup>th</sup>/20<sup>th</sup> 2015 </li>
                                 <li><strong>Time</strong>: 16:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                             <!--<p class="item-intro text-muted">See you there!</p>-->
                             <p class="item-intro text-muted">Register <a href="https://www.eventbrite.com/e/intro-to-web-development-part-b-tickets-20028167789" target="_blank">here</a>!</p>
@@ -1638,7 +1638,7 @@
                             <ul class="list-inline">
                                 <li><strong>Date</strong>: 25 April 2015</li>
                                 <li><strong>Time</strong>: 17:00</li>
-                                <li><strong>Place</strong>: <a href="http://techministry.gr/" target="_blank">Tech Ministry</a></li>
+                                <li><strong>Place</strong>: <a href="https://www.lambdaspace.gr/" target="_blank">Tech Ministry</a></li>
                             </ul>
                                           <img class="img-responsive" src="img/events/editathon-poster.png" alt="">
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
