--- a/index.html
+++ b/index.html
@@ -977,6 +977,12 @@
                                     <label for="mce-EMAIL">Email Address</label>
                                     <input type="email" placeholder="Your Email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
                                 </div>
+                                <div class="mc-field-group input-group">
+                                        <ul>
+                                            <li><input type="radio" value="1" name="group[9837]" id="mce-group[9837]-9837-0"><label for="mce-group[9837]-9837-0">Subscribers</label></li>
+                                            <li><input type="radio" value="2" name="group[9837]" id="mce-group[9837]-9837-1"><label for="mce-group[9837]-9837-1">Members</label></li>
+                                        </ul>
+                                </div>
                             </div>
                             <div class="clearfix"></div>
                             <div class="col-lg-12 text-center">
