add ! to update section

--- a/index.html
+++ b/index.html
@@ -979,7 +979,7 @@
                                 </div>
                                 <div class="mc-field-group input-group">
                                         <ul style="list-style-type: none; color: #ff6b6b;" >
-                                            <li><input type="radio" value="1" name="group[9837]" id="mce-group[9837]-9837-0"><label for="mce-group[9837]-9837-0" class="mc-rbutt"> I want to stay updated.</label></li>
+                                            <li><input type="radio" value="1" name="group[9837]" id="mce-group[9837]-9837-0"><label for="mce-group[9837]-9837-0" class="mc-rbutt"> I want to stay updated!</label></li>
                                             <li><input type="radio" value="2" name="group[9837]" id="mce-group[9837]-9837-1"><label for="mce-group[9837]-9837-1" class="mc-rbutt"> I want to become a member!</label></li>
                                         </ul>
                                 </div>
