add projects and devit

--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
                       <a class="page-scroll" href="#events">Events</a>
                     </li>
                     <li>
+                      <a class="page-scroll" href="#projects">Projects</a>
+                    </li>
+                    <li>
                         <a class="page-scroll" href="#team">Team</a>
                     </li>
                     <li>
@@ -483,6 +486,73 @@
                         <p class="text-muted">Opinion exchange while getting to know each other.</p>
                     </div>
                 </div>-->
+            </div>
+        </div>
+    </section>
+
+    <!-- DEVit Section -->
+    <section id="projects">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-12 text-center">
+                    <h2 class="section-heading">Projects</h2>
+                    <h3 class="section-subheading text-muted">Projects we developed as a team or in collaboration with others</h3>
+                </div>
+            </div>
+            <div class="row">                
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#projectModal1" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/projects/bordershare-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>BorderShare</h4>
+                        <p class="text-muted">Our participation for the BorderHack hackathon</p>
+                    </div>
+                </div>
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#projectModal2" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/projects/girlup-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Girl Up! Website</h4>
+                        <p class="text-muted">The website of the Girl Up! team</p>
+                    </div>
+                </div>          
+                <div class="col-md-4 col-sm-6 portfolio-item">
+                    <a href="#projectModal3" class="portfolio-link" data-toggle="modal">
+                        <div class="portfolio-hover">
+                            <div class="portfolio-hover-content">
+                               <!--  <i class="fa fa-plus fa-3x"></i> -->
+                            </div>
+                        </div>
+                        <img src="img/projects/earthiscool-banner.png" class="img-responsive" alt="">
+                    </a>
+                    <div class="portfolio-caption">
+                        <h4>Earth is cool</h4>
+                        <p class="text-muted">Our participation for the NasaSpace Challenge</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section id="devit">
+        <div class="row">
+            <!-- <div class="col-lg-12 text-center">
+                <h3><img src="img/logo-b.png" class="devit-shesharp"> proudly co-organizes <a href="http://devitconf.org" target="_blank"><img src="img/projects/devit-logo.svg" class="devit-logo"></a> with <a href="http://skgtech.io" target="_blank"><img src="img/logos/skgtech-logo.svg" class="devit-skgtech"></a></h3>
+            </div> -->           
+            <div class="col-lg-12 intro-text">
+                <a href="http://devitconf.org" target="_blank"><img src="img/projects/devit-logo.svg" class="devit-logo"></a>
+                <h3 class="devit-text">Our team proudly co-organizes DEVit, in collaboration with <a href="http://skgtech.io" target="_blank">SKGTech</a></h3>
             </div>
         </div>
     </section>
