--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
             </div> -->           
             <div class="col-lg-12 intro-text">
                 <a href="http://devitconf.org" target="_blank"><img src="img/projects/devit-logo.svg" class="devit-logo"></a>
-                <h3 class="devit-text">Our team proudly co-organizes DEVit, in collaboration with <a href="http://skgtech.io" target="_blank">SKGTech</a></h3>
+                <div class="devit-text">Our team proudly co-organizes DEVit, in collaboration with <a href="http://skgtech.io" target="_blank">SKGTech</a></div>
             </div>
         </div>
     </section>
