add basic info for each project - much info missing

--- a/index.html
+++ b/index.html
@@ -535,11 +535,11 @@
                                <!--  <i class="fa fa-plus fa-3x"></i> -->
                             </div>
                         </div>
-                        <img src="img/projects/earthiscool-banner.png" class="img-responsive" alt="">
+                        <img src="img/projects/nasa-banner.png" class="img-responsive" alt="">
                     </a>
                     <div class="portfolio-caption">
                         <h4>Earth is cool</h4>
-                        <p class="text-muted">Our participation for the NasaSpace Challenge</p>
+                        <p class="text-muted">Our participation for the NasaSpace Apps Challenge</p>
                     </div>
                 </div>
             </div>
@@ -1141,6 +1141,7 @@
             </div>
         </div>
     </div> -->
+
     <!-- USED -->
     <div class="portfolio-modal modal fade" id="portfolioModal16" tabindex="-1" role="dialog" aria-hidden="true">
         <div class="modal-content">
@@ -1778,6 +1779,83 @@
                                 <li><strong>Place</strong>: Facilities in Kalamaria of the School of Informatics, AUTH</li>
                             </ul>
                             <img class="img-responsive img-centered" src="img/events/hourofcode-collage.jpg" alt="">
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Projects Modals -->
+
+    <div class="portfolio-modal modal fade" id="projectModal3" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Earth is cool!</h2>
+                            <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+                            <img class="img-responsive img-centered" src="img/projects/nasa-logo.png" alt="">
+                            <p>Our participation in the Nasa Space Apps Challenge, with a video explaining the reasons we find the Earth is Cool!</p>
+                            <p>You can find our participation video <a href="https://www.youtube.com/watch?v=3ptVCpTkLL4" target="_blank">here</a>.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="projectModal2" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>Girl Up!</h2>
+                            <p class="item-intro text-muted">The implementation of the Girl Up! team's website.</p>
+                            <img class="img-responsive img-centered" src="img/projects/girlup-banner.png" alt="">
+                            <p>To GIRL UP είναι ένα εθελοντικό πρόγραμμα mentoring με ένα πολύ σημαντικό στόχο: Να βοηθήσει και να εμπνεύσει τα κορίτσια όλων των ηλικιών να αντιμετωπίσουν οποιαδήποτε πρόκληση προκύψει κατά τη διάρκεια της καθημερινότητάς τους, τα χρόνια που διαμορφώνουν τον χαρακτήρα τους.</p>
+                            <p>You can find the Girl Up! website <a href="http://girlup.gr/" target="_blank">here</a>.</p>
+                            <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="portfolio-modal modal fade" id="projectModal1" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-content">
+            <div class="close-modal" data-dismiss="modal">
+                <div class="lr">
+                    <div class="rl">
+                    </div>
+                </div>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <div class="modal-body">
+                            <h2>BorderShare</h2>
+                            <!-- <p class="item-intro text-muted">Lorem ipsum dolor sit amet consectetur.</p> -->
+                            <img class="img-responsive img-centered" src="img/projects/bordershare-banner.png" alt="">
+                            <p>BorderShare is an information distributor for anything you can do to help the refugee problem. We collect all the refugee drop-in points for food, clothes and everything they might need.</p>
+                            <p>You can find the BorderShare website <a href="http://bordershare.gr/" target="_blank">here</a>.</p>
                             <button type="button" class="btn btn-primary" data-dismiss="modal"><i class="fa fa-times"></i> Close Project</button>
                         </div>
                     </div>
